--- a/app/public/stylesheets/style.styl
+++ b/app/public/stylesheets/style.styl
@@ -1,5 +1,72 @@
+* 
+  margin: 0
+  padding: 0
+html, body 
+  height: 100%  
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font: 18px "Lucida Grande", Helvetica, Arial, sans-serif
 a
   color: #00B7FF
+#main 
+  overflow: auto
+  padding-bottom: 120px  
+#header
+  background-color: rgb(34, 23, 90)
+  position: relative
+  width: 100%
+  height: 36px
+#logo
+  height: 30px
+  width: 120px
+  position: absolute
+  top: 3px
+  left: 3px
+#logo a
+  background-color: #333
+  display: block 
+  height: 30px
+  width: 120px 
+#menuButton 
+  background-color: rgb(40,60,200) 
+  position: absolute
+  top: 3px
+  right: 3px
+  height: 30px
+  width: 30px  
+#footer
+  position: relative
+  margin-top: -120px
+  height: 120px
+  clear: both
+#footerCopyright
+  float: left
+  margin-left: 12px  
+#footerLinks
+  float: right
+  margin-right: 12px  
+#footerLinks ul 
+  list-style-type: none
+#footerLinks ul li 
+  display: inline
+#footerLinks ul li a 
+  color: rgb(34,98,64)
+  display: block
+  text-decoration: none
+#featuredVideo
+  position: relative
+  width: 800px  
+#homeWrapper  
+  width: 100%
+  position: relative
+#homeSidebar 
+  position: absolute
+  right: 0
+  top: 0
+  background-color: rgb(200,80,90)
+  width: 360px
+  height: 480px
+
+
+
+
+
